# numbl

./: .gitignore  .gitmodules  .prettierignore  CLAUDE.md  CONTRIBUTING.md  README.html  README.md  binding.gyp  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.browser.json  tsconfig.graphics.json  tsconfig.lib.json  vite.config.ts  vite.site-viewer.config.ts  vite.test-runner.config.ts
.husky/: pre-commit
bench/: run-alloc-bench.ts  run-backend-bench.ts
benchmarks/: chunkie_helmholtz_build.m  chunkie_helmholtz_starfish.m  chunkie_helmholtz_starfish.md  complex_scalar_bench.m  complex_scalar_bench.md  complex_tensor_bench.m  complex_tensor_bench.md  koffi_overhead_bench.c  koffi_overhead_bench.md  koffi_overhead_bench.ts  parallel_sweep.c  parallel_sweep_analyze.py  run_benchmarks.ts  scalar_bench.m  scalar_bench.md  scalar_bench_compare.sh  tensor_ops_bench.m  tensor_ops_bench.md  tensor_ops_bench2.m  tensor_ops_bench2.md  tensor_ops_bench_compare.sh  tensor_ops_bench_fused.c  tensor_ops_bench_perop.c
browser-wasm/wrappers/ducc0-fft/: CMakeLists.txt  README.md  build-ducc0-fft.sh  ducc0_fft_wrapper.cpp
docs/: acknowledgements.md  adding-builtin-help.md  adding-plot-functions.md  agents.md  browser-wasm.md  c-jit-koffi-migration.md  figure-hdf5-format.md  library-usage.md  matlab-compatibility.md  matlab-differences.md  native-addon.md  tensor-ops.md  uihtml-figures.md
examples/: scalar_bench.m  scalar_bench_compare.sh  tensor_ops_benchmark.c  tensor_ops_benchmark.m  tensor_ops_benchmark_small.m
jit_parity/: README.md  run.mjs
native/: elemwise.cpp  lapack_addon.cpp  lapack_chol.cpp  lapack_common.h  lapack_eig.cpp  lapack_fft.cpp  lapack_fft_batch.cpp  lapack_gmres.cpp  lapack_inv.cpp  lapack_linsolve.cpp  lapack_lu.cpp  lapack_matmul.cpp  lapack_matmul_complex.cpp  lapack_qr.cpp  lapack_qz.cpp  lapack_svd.cpp  numbl_addon.cpp  numbl_addon_common.h  ops_napi.cpp  randn.cpp  unary_elemwise.cpp
numbl_test_scripts/: .browser-skip  build_native.sh  build_wasm.sh  run_all.sh  run_c_jit.sh  run_c_jit_fuse.sh  run_c_jit_parity.sh  run_e1.sh
public/: coi-serviceworker.js  figure-sw.js  numbl-embed.js  robots.txt
scripts/: add_toplevel_assert_jit.ts  annotate_assert_jit.ts  build-browser-wasm.mjs  build-native-deps.mjs  build_browser.ts  build_runtime_snippets.ts  bump-version.ts  check-backend-bench.mjs  copy-test-scripts.ts  coverage-all.sh  install-native.mjs  native-addon-config.mjs  prepare-browser-wasm-sources.mjs  prerender-seo.ts  test-scripts-manifest.ts  update-readme-usage.ts
server/: DEPLOYMENT.md  execution-service.ts
src/: App.tsx  cli-fileio.ts  cli-plot-handler.ts  cli-plot-server.ts  cli-repl.ts  cli-scan.ts  cli-system.ts  cli.ts  graphics-lib.ts  index.css  lib.ts  mip-directives.ts  node.ts  numbl-repl-worker.ts  numbl-worker.ts  numblLanguage.ts  syncInputChannel.ts  test-setup.ts  workerErrorFormat.ts
src/wasm-blis/: CMakeLists.txt  dgemm.cpp  eigen_dgemm.cpp  openblas_dgemm.cpp
tests-browser/: browser-session.spec.ts  (+1 more)
(+2282 files in other folders)
